--- a/web/src/main/webapp/html/01_hello.html
+++ b/web/src/main/webapp/html/01_hello.html
@@ -28,26 +28,41 @@
 <!-- body 태그 : 브라우저에 출력될 내용(Contents)을 제공하기 위한 태그 - Document -->
 <!-- => 하위태그 : header 태그(머릿부), navi 태그(메뉴), section 태그(몸체부), article 태그(본문)
 , aside 태그(보조문), footer 태그(꼬릿부), h1 태그, p 태그, img 태그 등 -->
-<!--  -->
+<!-- body 태그의 하위태그를 박스모델(BoxModel)로 표현하면 블럭 레벨 태그와 인라인 레벨의 태그로 구분 -->
+<!-- 블럭 레벨 태그(Block Level Tag) : 하나의 태그로 표현되는 박스모델이 전체 라인을 모두 사용하는 태그 -->
+<!-- => div 태그, p 태그, h1 태그, ol 태그, ul 태그 등 -->
+<!-- 인라인 레벨 태그(Inline Level Tag) : 하나의 태그로 표현되는 박스모델이 라인을 일부분만 사용하는 태그 -->
+<!-- => span 태그, img 태그, input 태그, select 태그 등 -->
+<!-- => 인라인 레벨 태그의 하위 태그로 블럭 레벨 태그를 사용하면 경고 발생 -->
 <body>
+	<!-- hn : 문단의 제목을 출력하기 위한 태그 - n : 1~6(제목의 크기를 표현)  -->
+	<!-- align 속성 : 태그내용을 정렬하기 위한 속성 : left(기본), right, center, justify -->
+	<!-- title 속성 : 툴팁 기능을 사용하여 설명문(속성값)을 제공하기 위한 속성 -->	
+	<h1 align="left" title="문단의 제목을 출력합니다.">문단제목-1</h1>
+	<h2 align="center">문단제목-2</h2>
+	<h3 align="right">문단제목-3</h3>
+	<h4 align="justify">문단제목-4</h4>
+	<h5>문단제목-5</h5>
+	<h6>문단제목-6</h6>
 	
+	<!-- hr : 수평선을 출력하기 위한 태그 -->
+	<hr>
+	<!-- width : 태그(박스모델)의 폭을 변경하기 위한 속성 - 속성값 : 크기 -->
+	<!-- => 크기 또는 위치를 표현하는 단위 : px(기본) - 절대값, %(백분율) - 상대값 --> 
+	<hr align="left" width="600">	
+	<hr align="left" width="50%">	
+	
+	<!-- p 태그 : 문단을 출력하기 위한 태그 -->
+	<!-- => 태그내용이 박스모델의 폭을 벗어날 경우 자동 줄바꿈 처리되어 출력 -->
+	<!-- => HTML 문서에서 엔터(Enter)로 줄바꿈 처리가 불가능하여 다수의 공백(Space)은 하나의 공백으로 처리되어 출력 --> 
+	<p>CSL(Client Script Language - HTML, CSS, JavaScript)와
+		 SSL(Server Script Language - JSP)를                        배우도록 하겠습니다.</p>
+		 
+	<!-- br : 줄바꿈 처리하기 위한 태그 -->	 
+	<p>HTML은 웹문서를 구조적으로 표현하기 위한 언어이며<br>CSS는 웹문서에 스타일을 제공하기 위한 언어이다.</p> 
+	
+	<!-- HTML에서 표현 불가능한 문자는 회피문자(Escape Character)로 표현하여 출력 처리 -->
+	<!-- => &nbsp; : 공백, &lt; : < 문자, &gt; : > 문자, &amp; : & 문자 등 -->
+	<p>&lt;홍길동님&gt; &amp; &lt;임꺽정&gt;님&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;반갑니다.</p>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
