--- a/web/src/main/webapp/html/01_hello.html
+++ b/web/src/main/webapp/html/01_hello.html
@@ -1,12 +1,13 @@
 <!-- MarkUp Language 주석문 -->
 
 <!-- HTML(Hyper Text MarkUp Language) : 태그(Tag)를 사용하여 웹문서를 구조적으로 표현하기 위한 언어 -->
-<!-- => 브라우저 엔진에 의해 해석되어 실행(출력)되는 언어 - CSL(Client Script Language) : HTML, CSS, JavaScripy -->
+<!-- => 브라우저 엔진에 의해 해석되어 실행(출력)되는 언어 - CSL(Client Script Language) : HTML, CSS, JavaScript -->
 
 <!-- 태그를 사용하여 웹문서(HTML 파일) 작성 - 태그는 대소문자 미구분 -->
 <!-- 시작태그와 종료태그가 하나의 그룹으로 묶여져서 사용 - HTML 태그에는 독립태그 존재 -->
 <!-- 시작태그와 종료태그 사이에는 하위태그 또는 태그내용 작성 -->
 <!-- 시작태그에 속성과 속성값을 사용하여 태그를 다양하게 표현 -->
+<!-- => 동일한 이름의 속성 사용 불가능 -->
 
 <!-- DOCTYPE : 웹문서의 종류 및 버전을 표현 - HTML5를 사용하여 작성된 웹문서(HTML 문서) -->
 <!DOCTYPE html>
@@ -35,7 +36,7 @@
 <!-- => span 태그, img 태그, input 태그, select 태그 등 -->
 <!-- => 인라인 레벨 태그의 하위 태그로 블럭 레벨 태그를 사용하면 경고 발생 -->
 <body>
-	<!-- hn : 문단의 제목을 출력하기 위한 태그 - n : 1~6(제목의 크기를 표현)  -->
+	<!-- h1~h6 : 문단의 제목을 출력하기 위한 태그 - 1~6(제목의 크기를 표현)  -->
 	<!-- align 속성 : 태그내용을 정렬하기 위한 속성 : left(기본), right, center, justify -->
 	<!-- title 속성 : 툴팁 기능을 사용하여 설명문(속성값)을 제공하기 위한 속성 -->	
 	<h1 align="left" title="문단의 제목을 출력합니다.">문단제목-1</h1>
@@ -64,5 +65,17 @@
 	<!-- HTML에서 표현 불가능한 문자는 회피문자(Escape Character)로 표현하여 출력 처리 -->
 	<!-- => &nbsp; : 공백, &lt; : < 문자, &gt; : > 문자, &amp; : & 문자 등 -->
 	<p>&lt;홍길동님&gt; &amp; &lt;임꺽정&gt;님&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;반갑니다.</p>
+	
+	<!-- pre : 브라이저에 태그내용을 그대로 출력 처리하는 태그 -->
+	<!-- => 공백 또는 엔터를 사용하여 출력 처리 가능 -->
+	<pre>홍길동님,                     만나서 반갑습니다.
+	다음에 다시 만나요.</pre>
+	
+	<!-- div 태그 : 범위를 설정하기 위한 태그 - 블럭 레벨 태그 -->
+	<!-- span 태그 : 범위를 설정하기 위한 태그 - 인라인 레벨 태그 -->
+	<!-- style 속성 : 태그에 CSS 스타일을 적용하기 위한 속성 -->
+	<!-- => 속성값 : CSS 스타일 관련 속성과 속성값을 사용 -->
+	<div style="font-size: 24px;">오늘은 <span style="color: red;">
+		2023년 12월 20일 수요일</span>입니다.</div>
 </body>
 </html>
