--- a/web/src/main/webapp/html/01_hello.html
+++ b/web/src/main/webapp/html/01_hello.html
@@ -11,19 +11,19 @@
 
 <!-- DOCTYPE : 웹문서의 종류 및 버전을 표현 - HTML5를 사용하여 작성된 웹문서(HTML 문서) -->
 <!DOCTYPE html>
-<!-- html : HTML 문서를 작성하기 위해 사용되는 최상위 태그 -->
+<!-- html 태그 : HTML 문서를 작성하기 위해 사용되는 최상위 태그 -->
 <!-- => 하위태그 : head 태그, body 태그 -->
 <html>
-<!-- head : HTML 문서에 대한 정보를 제공하기 위한 태그 -->
+<!-- head 태그 : HTML 문서에 대한 정보를 제공하기 위한 태그 -->
 <!-- => 하위태그 : meta 태그, title 태그, script 태그, style 태그, link 태그 등 -->	
 <head>
-<!-- meta : HTML 문서의 메타 데이타를 태그 속성과 속성값으로 제공하는 태그 -->
+<!-- meta 태그 : HTML 문서의 메타 데이타를 태그 속성과 속성값으로 제공하는 태그 -->
 <!-- charset 속성 : HTML 문서의 문자형태(CharacterSet - Encoding)를 속성값으로 설정  -->
 <!-- => 브라우저가 HTML 문서를 전달받아 해석하여 실행하기 위한 문자의 인코딩 방식 제공 -->
 <!-- => 기본 속성값 : ISO-8859-1(서유럽어) -->
 <!-- => 한글 관련 캐릭터셋 : euc-kr(완성형), utf-8(조합형) -->
 <meta charset="UTF-8">
-<!-- title : HTML 문서의 제목을 제공하기 위한 태그 - 브라우저에 페이지 제목으로 출력 처리 --> 
+<!-- title 태그 : HTML 문서의 제목을 제공하기 위한 태그 - 브라우저에 페이지 제목으로 출력 처리 --> 
 <title>HTML</title>
 </head>
 <!-- body 태그 : 브라우저에 출력될 내용(Contents)을 제공하기 위한 태그 - Document -->
@@ -36,7 +36,7 @@
 <!-- => span 태그, img 태그, input 태그, select 태그 등 -->
 <!-- => 인라인 레벨 태그의 하위 태그로 블럭 레벨 태그를 사용하면 경고 발생 -->
 <body>
-	<!-- h1~h6 : 문단의 제목을 출력하기 위한 태그 - 1~6(제목의 크기를 표현)  -->
+	<!-- h1~h6 태그 : 문단의 제목을 출력하기 위한 태그 - 1~6(제목의 크기를 표현)  -->
 	<!-- align 속성 : 태그내용을 정렬하기 위한 속성 : left(기본), right, center, justify -->
 	<!-- title 속성 : 툴팁 기능을 사용하여 설명문(속성값)을 제공하기 위한 속성 -->	
 	<h1 align="left" title="문단의 제목을 출력합니다.">문단제목-1</h1>
@@ -46,7 +46,7 @@
 	<h5>문단제목-5</h5>
 	<h6>문단제목-6</h6>
 	
-	<!-- hr : 수평선을 출력하기 위한 태그 -->
+	<!-- hr 태그 : 수평선을 출력하기 위한 태그 -->
 	<hr>
 	<!-- width : 태그(박스모델)의 폭을 변경하기 위한 속성 - 속성값 : 크기 -->
 	<!-- => 크기 또는 위치를 표현하는 단위 : px(기본) - 절대값, %(백분율) - 상대값 --> 
@@ -59,14 +59,14 @@
 	<p>CSL(Client Script Language - HTML, CSS, JavaScript)와
 		 SSL(Server Script Language - JSP)를                        배우도록 하겠습니다.</p>
 		 
-	<!-- br : 줄바꿈 처리하기 위한 태그 -->	 
+	<!-- br 태그 : 줄바꿈 처리하기 위한 태그 -->	 
 	<p>HTML은 웹문서를 구조적으로 표현하기 위한 언어이며<br>CSS는 웹문서에 스타일을 제공하기 위한 언어이다.</p> 
 	
 	<!-- HTML에서 표현 불가능한 문자는 회피문자(Escape Character)로 표현하여 출력 처리 -->
 	<!-- => &nbsp; : 공백, &lt; : < 문자, &gt; : > 문자, &amp; : & 문자 등 -->
 	<p>&lt;홍길동님&gt; &amp; &lt;임꺽정&gt;님&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;반갑니다.</p>
 	
-	<!-- pre : 브라이저에 태그내용을 그대로 출력 처리하는 태그 -->
+	<!-- pre 태그 : 브라이저에 태그내용을 그대로 출력 처리하는 태그 -->
 	<!-- => 공백 또는 엔터를 사용하여 출력 처리 가능 -->
 	<pre>홍길동님,                     만나서 반갑습니다.
 	다음에 다시 만나요.</pre>
