--- a/web/src/main/webapp/html/02_img.html
+++ b/web/src/main/webapp/html/02_img.html
@@ -27,6 +27,9 @@
 	<!-- <img alt="코알라" src="./Koala.jpg" width="200"> -->
 	<img alt="코알라" src="Koala.jpg" width="200">
 	
+	<img alt="펭귄" src="/web/html/images/Penguins.jpg" width="200">
+	<img alt="펭귄" src="images/Penguins.jpg" width="200">
+	
 	
 </body>
 </html>
