--- a/web/src/main/webapp/html/02_img.html
+++ b/web/src/main/webapp/html/02_img.html
@@ -30,18 +30,7 @@
 	<img alt="펭귄" src="/web/html/images/Penguins.jpg" width="200">
 	<img alt="펭귄" src="images/Penguins.jpg" width="200">
 	
-	
+	<img alt="튤립" src="/web/Tulips.jpg" width="200">
+	<img alt="튤립" src="../Tulips.jpg" width="200">
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
