--- a/web/src/main/webapp/html/03_li.html
+++ b/web/src/main/webapp/html/03_li.html
@@ -12,7 +12,7 @@
 	<h2>유채방</h2>
 	<!-- ul 태그 : 목록에 블릿(기호)을 제공하여 출력하기 위한 태그 -->
 	<ul>
-		<li>도미토리, 동성(또는 가족)</li>
+		<li>도미토리, 동성(또는 가족) 1팀</li>
 		<li>4인실</li>
 		<li>공동 취사실 및 욕실(화장실)</li>
 		<li>비용
@@ -26,7 +26,7 @@
 	<h2>동백방</h2>
 	<!-- ol 태그 : 목록에 순서값을 제공하요 출력하기 위한 태그 -->
 	<ol>
-		<li>도미토리, 동성(또는 가족)</li>
+		<li>도미토리, 동성(또는 가족) 1팀</li>
 		<li>4인실</li>
 		<li>공동 취사실 및 욕실(화장실)</li>
 		<li>비용
