--- a/web/src/main/webapp/html/07_a.html
+++ b/web/src/main/webapp/html/07_a.html
@@ -16,6 +16,22 @@
 	<a href="https://www.naver.com">네이버</a>&nbsp;&nbsp;&nbsp;
 	<a href="https://www.google.com">구글</a>
 	<hr>
-	
+	<!-- target 속성 : _self(현재 브라우저 - 기본), _blank(새로운 브라우저), _top(최상위 브라우저), 
+	_parent(부모 브라우저), _child(자식 브라우저), iframe 태그(내부 브라우저)의 name 속성값
+	 중 하나를 속성값으로 설정 -->
+	<a href="/web/html/07_kor.html" target="_blank"><img alt="한글" src="/web/html/images/kor.png"></a>
+	<a href="07_eng.html" target="_blank"><img alt="영어" src="images/eng.png"></a>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
