--- a/web/src/main/webapp/html/10_iframe.html
+++ b/web/src/main/webapp/html/10_iframe.html
@@ -14,6 +14,7 @@
 	<!-- height 속성 : 태그의 높이를 속성값으로 설정 - 단위 : px -->
 	<!-- <iframe src="https://www.daum.net" width="600" height="500"></iframe> -->
 	
-	<iframe></iframe>
+	<iframe src="/web/html/10_left.html" width="600" height="500" name="left"></iframe>
+	<iframe src="/web/html/10_right.html" width="600" height="500" name="right"></iframe>
 </body>
 </html>
