--- a/web/src/main/webapp/html/03_li.html
+++ b/web/src/main/webapp/html/03_li.html
@@ -24,7 +24,7 @@
 	</ul>	
 	<hr>
 	<h2>동백방</h2>
-	<!-- ol 태그 : 목록에 순서값을 제공하요 출력하기 위한 태그 -->
+	<!-- ol 태그 : 목록에 순서값을 제공하여 출력하기 위한 태그 -->
 	<ol>
 		<li>도미토리, 동성(또는 가족) 1팀</li>
 		<li>4인실</li>
