--- a/web/src/main/webapp/html/12_video.html
+++ b/web/src/main/webapp/html/12_video.html
@@ -8,6 +8,7 @@
 	<h1>video 태그</h1>
 	<hr>
 	<!-- video 태그 : 서버에 저장된 동영상 파일을 제공받아 재생하는 태그 -->
-
+	<!-- => 동영상 파일 : mp4 파일, ogg 파일(ogv 파일), webm 파일 등 -->
+	<video src="/web/html/video/movie.mp4" autoplay controls width="600"></video>
 </body>
 </html>
