--- a/web/src/main/webapp/html/13_action.html
+++ b/web/src/main/webapp/html/13_action.html
@@ -2,9 +2,32 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>HTML</title>
 </head>
 <body>
-
+	<h1>form 태그</h1>
+	<hr>
+	<p>form 태그를 사용하여 요청한 웹프로그램 - 사용자 입력값을 전달받아 처리 가능</p>
+	
+	<!-- a 태그를 사용하여 클릭 이벤트가 발생되면 웹프로그램을 GET 방식으로 요청하여 HTML 문서를
+	응답받아 출력 처리  -->
+	<!-- => href 속성에 요청할 웹프로그램의 URL 주소를 속성값으로 설정 -->
+	<!-- => a 태그를 사용하여 웹프로그램을 요청할 경우 값을 전달하기 위해 질의문자열을 작성하여 전달 가능 -->
+	<!-- URL 주소는 영문자, 숫자, 일부 특수문자로만 작성 가능  -->
+	<!-- => 질의문자열을 작성할 경우 영문자, 숫자, 일부 특수문자를 제외한 문자는 정상적인 문자값으로 전달 불가능 -->
+	<!-- => 영문자, 숫자, 일부 특수문자를 제외한 문자가 포함된 문자값은 부호화 처리하면 정상적인
+	 전달 가능 - Java 또는 JavaScript -->	 
+	<!-- <p><a href="/web/html/13_form.html?name=홍길동">[로그인 페이지 이동]</a></p> -->
+	<p><a href="/web/html/13_form.html?name=HingGilDong">[로그인 페이지 이동]</a></p>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
