--- a/web/src/main/webapp/html/13_action.html
+++ b/web/src/main/webapp/html/13_action.html
@@ -13,21 +13,11 @@
 	응답받아 출력 처리  -->
 	<!-- => href 속성에 요청할 웹프로그램의 URL 주소를 속성값으로 설정 -->
 	<!-- => a 태그를 사용하여 웹프로그램을 요청할 경우 값을 전달하기 위해 질의문자열을 작성하여 전달 가능 -->
-	<!-- URL 주소는 영문자, 숫자, 일부 특수문자로만 작성 가능  -->
+	<!-- URL 주소는 영문자, 숫자, 일부 특수문자로만 작성 가능 -->
 	<!-- => 질의문자열을 작성할 경우 영문자, 숫자, 일부 특수문자를 제외한 문자는 정상적인 문자값으로 전달 불가능 -->
 	<!-- => 영문자, 숫자, 일부 특수문자를 제외한 문자가 포함된 문자값은 부호화 처리하면 정상적인
 	 전달 가능 - Java 또는 JavaScript -->	 
-	<!-- <p><a href="/web/html/13_form.html?name=홍길동">[로그인 페이지 이동]</a></p> -->
-	<p><a href="/web/html/13_form.html?name=HingGilDong">[로그인 페이지 이동]</a></p>
+	<!-- <p><a href="/web/html/13_form.html?name=홍길동&phone=010-1234-5678">[로그인 페이지 이동]</a></p> -->
+	<p><a href="/web/html/13_form.html?name=HingGilDong&phone=010-1234-5678">[로그인 페이지 이동]</a></p>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
