--- a/web/src/main/webapp/html/17_select.html
+++ b/web/src/main/webapp/html/17_select.html
@@ -18,10 +18,11 @@
 			<!-- label 속성 : 그룹의 이름을 속성값으로 설정 -->
 			<optgroup label="공과대">
 				<!-- option 태그 : select 태그에 아이템을 제공하여 값을 전달하기 위한 태그 -->
+				<!-- selected 속성 : 우선 선택 기능을 제공하기 위한 속성 - 속성값 생략 가능 -->
 				<option value="arch">건축공학과</option>			
 				<option value="machinic">기계공학과</option>			
 				<option value="indust">산업공학과</option>			
-				<option value="computer">컴퓨터공학과</option>			
+				<option value="computer" selected>컴퓨터공학과</option>			
 				<option value="chemical">화학공학과</option>			
 			</optgroup>
 			<optgroup label="인문대">
