--- a/web/src/main/webapp/html/14_input.html
+++ b/web/src/main/webapp/html/14_input.html
@@ -9,14 +9,14 @@
 	<hr>
 	<!-- input 태그 : 사용자로부터 문자값(파일)을 입력받기 위한 태그 - 입력태그 -->
 	<!-- type 속성 : 값(파일)을 입력받기 위한 형태를 속성값으로 설정 -->
-	<!-- name 속성 : 태그의 이름을 속성값으로 설정 -->
-	<!-- => 웹프로그램에서 전달값을 구분하기 위한 식별자로 사용 -->
+	<!-- name 속성 : 태그의 이름을 속성값으로 설정 - 태그를 구분하기 위한 식별자로 사용 : 입력값 검증(JavaScript) -->
+	<!-- => 웹프로그램에서 전달값을 구분하기 위한 식별자로 사용(Java - Servlet) -->
 	<!-- value 속성 : 입력태그의 초기값을 속성값으로 설정 -->
 	<!-- size 속성 : 입력태그의 크기를 속성값으로 설정 -->
 	<!-- maxlength 속성 : 최대 입력 가능한 문자의 갯수를 속성값으로 설정 -->
 	<!-- autofocus 속성(HTML5) : 태그에 포커스(Focus)를 제공하는 속성 - 속성값 생략 가능 -->
-	<!-- required 속성(HTML5) : 필수 입력값을 설정하기 속성 - 속성값 생략 가능 -->
-	<!-- => required 속성이 설정된 입력태그에 입력값이 없는 경우 form 태그 미동작 -->
+	<!-- required 속성(HTML5) : 입력태그에 값을 반드시 입력하도록 설정하기 속성 - 속성값 생략 가능 -->
+	<!-- => required 속성이 설정된 입력태그에 입력값이 없는 경우 에러 메세지 출력 - form 태그 미동작 -->
 	<!-- placeholder 속성(HTML5) : 입력태그에 입력값에 대한 설명을 속성값으로 설정 -->
 	<!-- => placeholder 속성이 설정된 입력태그에 값이 입력되면 설명문은 자동 소멸 -->
 	<!-- readonly 속성 : 입력태그를 읽기 전용으로 설정하기 위한 속성 - 속성값 생략 가능 -->
@@ -25,7 +25,7 @@
 	<!-- max 속성 : 입력태그에 입력 가능한 최대값을 속성값으로 설정 -->
 	
 	<!-- type 속성값 -->
-	<!-- hidden : 입력태그를 숨겨 사용자로부터 값을 입력받아 않고 웹프로그램에 필요한 값을 전달 -->
+	<!-- hidden : 입력태그를 숨겨 사용자로부터 값을 입력받아 않고 웹프로그램에 필요한 임의값을 전달 -->
 	<!-- text : 키보드로 문자값을 입력받아 전달 -->
 	<!-- password : 키보드로 문자값을 입력받아 전달 - 입력된 문자가 특정 문자로 변환되어 표시 -->
 	<!-- radio : name 속성값이 같은 입력태그 중 하나를 선택하여 전달 -->
