--- a/web/src/main/webapp/css/02_css.html
+++ b/web/src/main/webapp/css/02_css.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <title>CSS</title>
 <!-- style 태그 : HTML 문서에 CSS에서 제공하는 스타일 시트를 적용하기 위한 태그 -->
-<style>
+<!-- type 속성 : 스타일을 적용하기 위한 파일의 형태(MimeType)를 속성값을 설정 -->
+<style type="text/css">
 /* CSS 주석명 */	
 /*
 Selector[,Selector,...][:paduo-class] {
