--- a/web/src/main/webapp/css/03_cascade.html
+++ b/web/src/main/webapp/css/03_cascade.html
@@ -2,9 +2,44 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>CSS</title>
+<style>
+/* 부모 엘리먼트에 적용된 스타일은 자식 엘리먼트에 상속되어 적용 */	
+body {
+	color: red;
+}		
+
+/* 스타일을 적용 순서에 의해 단계적으로 적용 - 기존 스타일 미적용(오버라이버) */
+p {
+	color: green;
+}
+
+li {
+	/* !important : 단계적 적용을 무시하고 최우선적으로 스타일을 적용하기 위한 속성값 */
+	color: blue !important;
+}
+
+/* 단계적 적용의 예외사항 - HTML 태그의 계층적 순서에 의해 스타일 적용 */
+/* => 자식 엘리먼트의 CSS 스타일이 나중에 적용 */
+ul {
+	font-size: 20px;
+	color: lime;
+}
+
+li {
+	color: aqua;
+}
+</style>
 </head>
 <body>
-
+	<h1>CSS 스타일의 단계적 적용 및 상속</h1>
+	<hr>
+	<p>브라우저에 출력될 아주 중요한 내용입니다.</p>
+	<hr>
+	<ul>
+		<li>아주 중요한 내용-1</li>
+		<li>아주 중요한 내용-2</li>
+		<li>아주 중요한 내용-3</li>
+	</ul>
 </body>
 </html>
