--- a/web/src/main/webapp/css/03_cascade.html
+++ b/web/src/main/webapp/css/03_cascade.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <title>CSS</title>
 <style>
-/* 부모 엘리먼트에 적용된 스타일은 자식 엘리먼트에 상속되어 적용 */	
+/* 부모 태그에 적용된 스타일은 자식 태그에 상속되어 적용 */	
 body {
 	color: red;
 }		
 
-/* 스타일을 적용 순서에 의해 단계적으로 적용 - 기존 스타일 미적용(오버라이버) */
+/* 스타일은 작성 순서에 의해 단계적으로 적용 - 기존 스타일 미적용(오버라이버) */
 p {
 	color: green;
 }
@@ -20,7 +20,7 @@ li {
 }
 
 /* 단계적 적용의 예외사항 - HTML 태그의 계층적 순서에 의해 스타일 적용 */
-/* => 자식 엘리먼트의 CSS 스타일이 나중에 적용 */
+/* => 부모 태그에 스타일이 먼저 적용되고 자식 태그의 스타일이 나중에 적용 */
 ul {
 	font-size: 20px;
 	color: lime;
