--- a/web/src/main/webapp/css/05_basic_selector.html
+++ b/web/src/main/webapp/css/05_basic_selector.html
@@ -26,11 +26,11 @@ p { color: blue; }
 
 /* 아이디 선택자 : 태그에 적용된 id 속성값으로 엘리먼트 선택 */
 /* => 태그 선택자와 구분하기 위해 id 속성값 앞에 [#]을 붙여 표현 */
-/* => class 속성값이 같은 다수의 엘리먼트에게 동일한 스타일 시트 적용 */
+/* => 하나의 id 속성값을 단일 엘리먼트에게 스타일 시트 적용 */
 #text4 { color: olive; }
 /* [,] 기호를 사용하여 선택자를 나열하여 작성 가능  */
 /* => 다수의 선택자의 엘리먼트에게 동일한 스타일 시트 적용 */	
-#text5, #text6 { color: silver;}
+#text5, #text6 { color: silver; }
 </style>
 </head>
 <body>
@@ -53,7 +53,7 @@ p { color: blue; }
 	<hr>
 	<h2>아이디 선택자</h2>
 	<!-- id 속성 : 태그를 구분하기 위한 식별자(고유값)를 속성값으로 설정 -->
-	<!-- => id 속성값은 태그를 구분하기 위한 사용하므로 동일한 속성값 적용 불가능 -->
+	<!-- => id 속성값은 태그를 구분하기 위해 사용하므로 동일한 속성값 적용 불가능 -->
 	<p id="text4">브라우저에 출력될 아주 중요한 내용입니다.</p>
 	<p id="text5">브라우저에 출력될 아주 중요한 내용입니다.</p>
 	<p id="text6">브라우저에 출력될 아주 중요한 내용입니다.</p>
