--- a/web/src/main/webapp/css/06_derive_selector.html
+++ b/web/src/main/webapp/css/06_derive_selector.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <title>CSS</title>
 <style>
-/* 후손 선택자 : 부모 엘리먼트를 기준으로 모든 깊이의 하위 태그로 엘리먼트 선택 */
+/* 후손 선택자 : 부모 엘리먼트를 기준으로 모든 깊이의 하위 태그 중에서 엘리먼트 선택 */
 /* 형식) 부모선택자 후손선택자 */
 #super1 div { color: purple; }	
 
-/* 자식 선택자 : 부모 엘리먼트를 기준으로 첫번째 깊이의 하위 태그로 엘리먼트 선택 */
+/* 자식 선택자 : 부모 엘리먼트를 기준으로 첫번째 깊이의 하위 태그 중에서 엘리먼트 선택 */
 /* 형식) 부모선택자 > 자식선택자 */
 #super2 > div { color: gold; }	
 
