--- a/web/src/main/webapp/css/07_attribute_selector.html
+++ b/web/src/main/webapp/css/07_attribute_selector.html
@@ -20,7 +20,7 @@ div[title='choice'] { color: blue; }
 /* 형식) 선택자[속성*='비교값'] - 선택자에 의해 검색된 엘리먼트 중 속성값에 비교값이 포함된 태그를 엘리먼트로 선택 */
 div[title*='여성'] { color: gold; } /* 1 3 4 */
 
-/* 형식) 선택자[속성~='비교값 비교값 ...'] - 선택자에 의해 검색된 엘리먼트 중 속성값이 비교값 중 하나인 태그를 엘리먼트로 선택 */
+/* 형식) 선택자[속성~='비교값'] - 선택자에 의해 검색된 엘리먼트 중 속성값이 비교값 중 하나인 태그를 엘리먼트로 선택 */
 div[title~='화장품'] { color: silver; } /* 2 4 */
 
 /* 형식) 선택자[속성^='비교값'] - 선택자에 의해 검색된 엘리먼트 중 속성값이 비교값으로 시작되는 태그를 엘리먼트로 선택 */
