--- a/web/src/main/webapp/css/15_list.html
+++ b/web/src/main/webapp/css/15_list.html
@@ -8,10 +8,22 @@ ul li {
 	/* list-style-type : 목록에 대한 블릿 또는 순서값 관련 스타일 속성 */
 	/* 속성값 : none - 블릿 또는 순서값 미제공 */
 	/* 속성값(ul 태그를 이용하여 블릿 제공) - disc(기본), circle, square 등 */
+	/* 속성값(ol 태그를 이용하여 순서값 제공) - decimal(기본), lower-alpha, upper-alpha, lower-roman, upper-roman 등 */
 	list-style-type: square;
 	
+	/* list-style-image : 블릿 대신 사용될 이미지를 제공하기 위한 스타일 속성 */
+	/* 속성값 : url 함수를 사용하여 이미지 파일의 URL 주소를 설정 */
+	list-style-image: url("/web/css/images/bullet.png");
 	
+	/* list-style-position : 목록 출력 위치 관련 스타일 속성 */
+	/* 속성값 : inside(들여쓰기), outside(밀어쓰기) */
+	list-style-position: inside;
 }	
+
+ol li {
+	/* list-style : 목록 관련 모든 스타일 속성값을 사용할 수 있는 스타일 속성 */
+	list-style: upper-roman inside;
+}
 </style>
 </head>
 <body>
