--- a/web/src/main/webapp/css/21_background_size.html
+++ b/web/src/main/webapp/css/21_background_size.html
@@ -3,6 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>CSS</title>
+<style>
+div {
+	width: 500px;
+	height: 350px;
+	border: 1px solid red;
+	margin: 20px;
+	background: url(/web/css/images/station.jpg) no-repeat;
+}	
+</style>
 </head>
 <body>
 	<h1>배경 관련 스타일 속성</h1>
