--- a/web/src/main/webapp/css/13_space.html
+++ b/web/src/main/webapp/css/13_space.html
@@ -18,11 +18,11 @@ div {
 /* pre-line : 다수의 공백을 하나의 공백으로 처리하여 출력하고 박스모델보다 큰 태그내용은 자동 줄바꿈 처리하여 출력 */
 .space1 { white-space: pre-line; }
 
-/* pre : 다수의 공백을 다수의 공백으로 처리하여 출력하고 박스모델보다 큰 태그내용은 자동 줄바꿈 처리 없이 그대로 출력 */
-/* => 태그내용이 박스모델의 폭을 벗어나 출력 처리 */
+/* pre : 다수의 공백을 다수의 공백으로 처리하여 출력하고 박스모델보다 큰 태그내용은 자동 줄바꿈 처리 없이 출력 */
+/* => 태그내용이 박스모델의 폭을 벗어나 출력 처리 - overflow 스타일 속성으로 박스모델을 벗어난 태그내용 처리 가능 */
 .space2 { white-space: pre; }
 
-/* nowrap : 다수의 공백을 하나의 공백으로 처리하여 출력하고 박스모델보다 큰 태그내용은 자동 줄바꿈 처리 없이 그대로 출력 */
+/* nowrap : 다수의 공백을 하나의 공백으로 처리하여 출력하고 박스모델보다 큰 태그내용은 자동 줄바꿈 처리 없이 출력 */
 .space3 { white-space: nowrap; }
 
 /* nowrap : 다수의 공백을 다수의 공백으로 처리하여 출력하고 박스모델보다 큰 태그내용은 자동 줄바꿈 처리하여 출력 */
