--- a/web/src/main/webapp/css/14_text.html
+++ b/web/src/main/webapp/css/14_text.html
@@ -50,7 +50,7 @@ div {
 	text-overflow: ellipsis;
 }
 
-/* text-decoration : 문장에 대한 선(Line) 관련 스타일 속성 */
+/* text-decoration : 문장의 선(Line) 관련 스타일 속성 */
 /* 속성값 : none(기본), underline, line-through, overline */
 .deco1 { text-decoration: underline; }
 .deco2 { text-decoration: line-through; }
