--- a/web/src/main/webapp/css/23_background_grandient.html
+++ b/web/src/main/webapp/css/23_background_grandient.html
@@ -27,8 +27,8 @@ div {
 }	
 
 /* background 스타일 속성값으로 radial-gradient 함수 사용 */
-/* radial-gradientt 함수 : 엘리먼트에 원형 그라데이션 효과를 제공하는 함수 */
-/* 형식) radial-gradientt(모양, 시작색, 종료색) */
+/* radial-gradient 함수 : 엘리먼트에 원형 그라데이션 효과를 제공하는 함수 */
+/* 형식) radial-gradient(모양, 시작색, 종료색) */
 /* => 모양 : circle, ellipse */
 /* => 박스모델의 중앙을 기준으로 원형 그라데이션 효과 제공 */
 /* => 원형 그라데이션 효과를 제공하는 박스모델의 위치 변경 - 특정 브라우저에서만 적용 */
