--- a/web/src/main/webapp/css/15_list.html
+++ b/web/src/main/webapp/css/15_list.html
@@ -5,10 +5,10 @@
 <title>CSS</title>
 <style>
 ul li {
-	/* list-style-type : 목록에 대한 블릿 또는 순서값 관련 스타일 속성 */
+	/* list-style-type : 목록(li 태그)에 대한 블릿 또는 순서값 관련 스타일 속성 */
 	/* 속성값 : none - 블릿 또는 순서값 미제공 */
-	/* 속성값(ul 태그를 이용하여 블릿 제공) - disc(기본), circle, square 등 */
-	/* 속성값(ol 태그를 이용하여 순서값 제공) - decimal(기본), lower-alpha, upper-alpha, lower-roman, upper-roman 등 */
+	/* 속성값(ul 태그 - disc(기본), circle, square 등 */
+	/* 속성값(ol 태그) - decimal(기본), lower-alpha, upper-alpha, lower-roman, upper-roman 등 */
 	list-style-type: square;
 	
 	/* list-style-image : 블릿 대신 사용될 이미지를 제공하기 위한 스타일 속성 */
@@ -29,11 +29,13 @@ ol li {
 <body>
 	<h1>목록 관련 스타일 속성</h1>
 	<hr>
+	<!-- ul 태그는 li 태그에 블릿을 제공하는 태그 -->
 	<ul>
 		<li>비순차 리스트-1</li>
 		<li>비순차 리스트-2</li>
 		<li>비순차 리스트-3</li>
 	</ul>
+	<!-- ol 태그는 li 태그에 순서값을 제공하는 태그 -->
 	<ol>
 		<li>순차 리스트-1</li>
 		<li>순차 리스트-2</li>
