--- a/web/src/main/webapp/css/25_box2.html
+++ b/web/src/main/webapp/css/25_box2.html
@@ -3,6 +3,33 @@
 <head>
 <meta charset="UTF-8">
 <title>CSS</title>
+<style>
+div {
+	width: 100px;
+	height: 100px;
+	border: 1px solid black;
+	margin: 10px 30px;
+	background: green;
+}	
+
+/* border-radius : 박스모델 외곽선 모서리 관련 스타일 속성 */
+/* 속성값 : px, % - 박스모델 외곽선 모서리에 원을 그려 둥굴게 출력 */
+.radius1 { border-radius: 10px; }
+.radius2 { border-radius: 30px; }
+.radius3 { border-radius: 50%; }
+.radius4 {
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+}
+.radius5 {
+	border-bottom-left-radius: 20px;
+	border-bottom-right-radius: 20px;
+}
+.radius6 {
+	/* 가로/세로 - 타원 */
+	border-radius: 30px/10px;
+}
+</style>
 </head>
 <body>
 	<h1>박스모델 관련 스타일 속성</h1>
