--- a/web/src/main/webapp/css/27_layout1.html
+++ b/web/src/main/webapp/css/27_layout1.html
@@ -3,6 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <title>CSS</title>
+<style>
+/* 블럭 레벨의 박스모델과 인라인 레벨의 박스모델로 구분하여 브라우저 자동 배치 */
+/* 블럭 레벨의 박스모델 : 하나의 라인을 모두 사용하는 박스모델 */
+/* => div, h1~h6, ul, ol, li, p, talbe, tr, form 등 */
+/* 인라인 레벨의 박스모델 : 하나의 라인을 같이 사용하는 박스모델 */
+/* => span, img, a, input, select, label, button 등 */	
+/* 블럭 레벨의 박스모델 후손으로 모든 박스모델 배치 가능 */
+/* => 인라인 레벨의 박스모델 후손으로 블럭 레벨의 박스모델 배치 불가능 */
+p {
+	width: 500px;
+	padding: 10px;
+	border: 1px solid black;	
+}	
+
+.acc {
+	color: red;
+	font-weight: bold;
+}
+</style>
 </head>
 <body>
 	<h1>박스모델 배치 관련 스타일 속성</h1>
@@ -10,6 +29,6 @@
 	<h2>예약방법</h2>
 	<p>펜션 예약의 가장 빠른 방법은 호스트(<span class="acc">010-1234-5678</span>)에게 
 	직접 연락하거나 <span class="acc">문자</span>를 남기는 것입니다.
-	<img alt="펜션이미지" src="/web/css/images/1/jpg"></p>
+	<img alt="펜션이미지" src="/web/css/images/1.jpg"></p>
 </body>
 </html>
