--- a/web/src/main/webapp/css/28_layout2.html
+++ b/web/src/main/webapp/css/28_layout2.html
@@ -35,8 +35,8 @@ img {
 	</ul>	
 	<hr>
 	<!-- 인라인 레벨의 박스모델은 하나의 라인에 박스모델이 여러개 출력 -->
-	<img alt="펜션이미지" src="/web/css/images/1.jpg">
-	<img alt="펜션이미지" src="/web/css/images/2.jpg">
-	<img alt="펜션이미지" src="/web/css/images/3.jpg">
+	<img alt="펜션 이미지1" src="/web/css/images/1.jpg">
+	<img alt="펜션 이미지2" src="/web/css/images/2.jpg">
+	<img alt="펜션 이미지3" src="/web/css/images/3.jpg">
 </body>
 </html>
